===============================================================================
=                                                          Change Log                                                                                              =
===============================================================================


2.2.31
====



2.2.30
=====

Bugs:

#349 Using BeyondCompare blocks Eclipse 
#350 Compare with Predecessor not working with BeyondCompare 
#352 Renaming a file/folder does not work on first attempt 

2.2.29
=====

Bugs:

3036429 	Timeout problems with long running cleartool process

Feature:

3604261 	Add filepath to checkout dialog


2.2.28
=====

Bugs:

3600131 	Saving from internal compare view saves the wrong version
3600106 	Support for BeyondCompare diff tool

2.2.27
=====

Feature:

3573773 	Get rid of manual prompt for vob location
3592132 	Prompt user about checkout of dir during refactoring
3571949 	Shortcut for Save/Clear/Refresh actions in configspec editor


2.2.26
=====

Bugs: 

3578088 	Check in blocking eclipse
3586681 	Missing view name in "File Checkedout in Other View" dialog
3588725 	Another fault in the Merge Diff Preference settings
3589090 	Renaming a file does not work



2.2.25
=====

Bugs:

3578088 	Check in blocking eclipse
3575729 	Saving from compare view doesn't write to disk

2.2.24
=====

Bugs:

3573460 Path is "none:null" in psf file

2.2.23
======

Bugs:

3571438 Checkin comment lost
3563362 Compare with Predecessor -> Failed to create the part's...(snapshot).

2.2.22
======

Features:

3535429 	Merge support
3432763 	External diff/merge tool support


2.2.21
=====

Bugs:

3567347 Project Set Failing (Jolene T).


2.2.20
======

Bugs:

3567004 Field "reserved checkout" twice in preferences.

2.2.19
======

Feature:

3459314 Show CC menu items in the Team menu only if it's needed

Bugs:

3566292 Compare from History broken

2.2.18
======

Bugs:

3563676 Faults in the Merge Diff Preference page