@@ -1,5 +1,10 @@
 package net.sourceforge.eclipseccase.ui.operation;
 
+import java.io.InputStream;
+
+import java.io.BufferedInputStream;
+import java.io.FileInputStream;
+
 import java.io.*;
 import net.sourceforge.eclipseccase.*;
 import net.sourceforge.eclipseccase.diff.AbstractExternalToolCommands;
@@ -32,57 +37,43 @@ public class ExternalCompareOperation extends Thread {
 				// Run long running task here
 				// Add a factory here that can decide which launcher to use.
 				AbstractExternalToolCommands diff = DiffFactory.getDiffTool(ClearCasePreferences.getExtDiffTool());
-				String vExtPath1 = resource.getLocation().toOSString() + "@@" + comparableVersion;
 				// Dont use version extended path. Since view selects current version.
-				String vExtPath2 = resource.getLocation().toOSString();
+				
+				String vExtPath1 = resource.getLocation().toOSString();//File in view.
+				System.out.println("Version one: "+vExtPath1);
+				String vExtPath2 = resource.getLocation().toOSString() + "@@" + comparableVersion;
+				System.out.println("Version two: "+vExtPath2);
 				
 				// Since we start eclipse in a view we also start external
 				// editor in a view and file not in snapshot view must be
 				// loaded.
+				File tempFile = null;
+				
 				try {
 					StateCache cache = StateCacheFactory.getInstance().get(resource);
 					if (cache.isSnapShot()) {
-						final File tempFile = File.createTempFile("eclipseccase", null);
+						tempFile = File.createTempFile("eclipseccase", null);
 						tempFile.delete();
 						tempFile.deleteOnExit();
-						provider.copyVersionIntoSnapShot(tempFile.getPath(), vExtPath1);
+						provider.copyVersionIntoSnapShot(tempFile.getPath(), vExtPath2);
+						System.out.println("TempFilePath is "+tempFile.getPath());
 						// now we should have the snapshot version.
+						
 					}
 				} catch (FileNotFoundException e) {
 					return new Status(IStatus.WARNING, "net.sourceforge.eclipseccase.ui.compare", "Internal, could not find file to compare with " + vExtPath1, e);
 				} catch (IOException e) {
 					return new Status(IStatus.WARNING, "net.sourceforge.eclipseccase.ui.compare", "Internal, Could not create temp file for predecessor: " + vExtPath1, e);
 				}
-				diff.twoWayDiff(vExtPath1, vExtPath2);
+				diff.twoWayDiff(vExtPath1, tempFile.getPath());
 				monitor.done();
 				return Status.OK_STATUS;
 			}
 		};
-		job.setUser(true);
+		job.setSystem(true);//To make sure job is NOT blocking gui or you are asked to put proc in background.
 		job.schedule();
 
 	}
-	// TODO: Tes
-	// public void execute() {
-	// // execute
-	// Job job = new Job("Compare") {
-	// protected IStatus run(IProgressMonitor monitor) {
-	// monitor.beginTask("Compare started...", 10);
-	// // Run long running task here
-	// // Add a factory here that can decide which launcher to use.
-	// AbstractExternalToolCommands diff =
-	// DiffFactory.getDiffTool(ClearCasePreferences.getExtDiffTool());
-	// String vExtPath1 =
-	// resource.getLocation().toOSString()+"@@"+comparableVersion;
-	// String vExtPath2 = resource.getLocation().toOSString();//Dont use version
-	// extended path. Since view selects current version.
-	// diff.twoWayDiff(vExtPath1,vExtPath2);
-	// monitor.done();
-	// return Status.OK_STATUS;
-	// }
-	// };
-	// job.setUser(true);
-	// job.schedule();
-	// }
+	
 
 }
