@@ -1,5 +1,9 @@
 package net.sourceforge.eclipseccase.ui.wizards;
 
+import org.eclipse.swt.SWT;
+
+import org.eclipse.swt.widgets.FileDialog;
+
 import org.eclipse.swt.widgets.Composite;
 
 import org.eclipse.jface.wizard.WizardPage;
@@ -12,7 +16,14 @@ public class UseExistingLabelPage extends WizardPage{
 	}
 
 	public void createControl(Composite parent) {
-		// TODO Auto-generated method stub
+		Composite content = new Composite(parent, SWT.NONE);
+
+		  // add all the controls to your wizard page here with 'content' as parent
+
+		  FileDialog fileDialog = new FileDialog(parent.getShell(), SWT.SAVE);
+		  fileDialog.setFilterExtensions(new String[] { "*.bm" });
+
+		  setControl(content);
 		
 	}
 
